...
              <NativeTabs.Trigger.VectorIcon family={Ionicons} name="book" />
            ),
          }}
        />
      </NativeTabs.Trigger>
      <NativeTabs.Trigger name="together" contentStyle={{ backgroundColor: colors.background }}>
        <NativeTabs.Trigger.Label>Us</NativeTabs.Trigger.Label>
        <NativeTabs.Trigger.Icon
          sf={{ default: 'envelope', selected: 'envelope.fill' }}
          src={{
            default: (
              <NativeTabs.Trigger.VectorIcon
                family={Ionicons}
...
